RESOLVED FIXED35093
[Soup] loses information related to message flags when converting from/to Resource{Request,Response}
https://bugs.webkit.org/show_bug.cgi?id=35093
Summary [Soup] loses information related to message flags when converting from/to Res...
Gustavo Noronha (kov)
Reported 2010-02-18 05:56:53 PST
When creating a WebCore object from a SoupMessage, we are not storing the message flags anywhere, so they get lost, and are not restored when creating the message from the WebCore object. We need this so that apps can use the flags when they get the message from WebKitNetworkRequest.
Attachments
proposed fix (9.93 KB, patch)
2010-02-18 06:02 PST, Gustavo Noronha (kov)
gustavo: commit-queue-
Refactor updating of ResourceResponse (4.18 KB, patch)
2010-02-19 10:09 PST, Gustavo Noronha (kov)
no flags
Fix the actual problem (8.07 KB, patch)
2010-02-19 10:10 PST, Gustavo Noronha (kov)
no flags
Gustavo Noronha (kov)
Comment 1 2010-02-18 06:02:18 PST
Created attachment 49006 [details] proposed fix This is the WebKit piece of the puzzle to get information regarding SSL certs to Epiphany. Although this was the primary motivation, this is indeed a limitation of the backend in general, and has potential to be useful in other cases.
Gustavo Noronha (kov)
Comment 2 2010-02-19 10:09:42 PST
Created attachment 49086 [details] Refactor updating of ResourceResponse
Gustavo Noronha (kov)
Comment 3 2010-02-19 10:10:19 PST
Created attachment 49087 [details] Fix the actual problem Patches split, as discussed by Jabber =).
Xan Lopez
Comment 4 2010-02-19 13:54:13 PST
Comment on attachment 49086 [details] Refactor updating of ResourceResponse The ChangeLog seems a bit... unorthodox. Otherwise looks fine.
Xan Lopez
Comment 5 2010-02-19 13:56:01 PST
Comment on attachment 49087 [details] Fix the actual problem LGTM.
Gustavo Noronha (kov)
Comment 6 2010-02-20 04:26:49 PST
Comment on attachment 49086 [details] Refactor updating of ResourceResponse Landed as r55046.
Gustavo Noronha (kov)
Comment 7 2010-02-20 04:37:38 PST
Comment on attachment 49087 [details] Fix the actual problem Landed as r55047.
Gustavo Noronha (kov)
Comment 8 2010-02-22 09:02:29 PST
Comment on attachment 49087 [details] Fix the actual problem I had to roll this out because it caused tests to fail, but I figured out the problem (I was failing to initialize m_soupFlags to 0 when constructing the objects), and got Xan to do an informal rubber stamp, and then relanded.
Note You need to log in before you can comment on or make changes to this bug.