2010-02-19  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

Reviewed by Xan Lopez.

        [Soup] loses information related to message flags when converting from/to Resource{Request,Response}
        https://bugs.webkit.org/show_bug.cgi?id=35093

        Refactor updating of ResourceResponse objects from soup message
        objects, to avoid code duplication.

        No behaviour change.

        * platform/network/soup/ResourceHandleSoup.cpp:
        (WebCore::fillResponseFromMessage):
        * platform/network/soup/ResourceResponseSoup.cpp:
        (WebCore::ResourceResponse::updateFromSoupMessage):

Canonical link: https://commits.webkit.org/46351@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55046 268f45cc-cd09-0410-ab3c-d52691b4dbfc