WebCore/platform/network/soup/ResourceResponseSoup.cpp
@@ -23,6 +23,8 @@
 
 #include "CString.h"
 #include "GOwnPtr.h"
+#include "HTTPParsers.h"
+#include "MIMETypeRegistry.h"
 #include "PlatformString.h"
 
 using namespace std;
@@ -65,6 +67,14 @@ void ResourceResponse::updateFromSoupMessage(SoupMessage* soupMessage)
     soup_message_headers_iter_init(&headersIter, soupMessage->response_headers);
     while (soup_message_headers_iter_next(&headersIter, &headerName, &headerValue))
         m_httpHeaderFields.set(String::fromUTF8(headerName), String::fromUTF8(headerValue));
+
+    String contentType = soup_message_headers_get_one(soupMessage->response_headers, "Content-Type");
+    setMimeType(extractMIMETypeFromMediaType(contentType));
+
+    setTextEncodingName(extractCharsetFromMediaType(contentType));
+    setExpectedContentLength(soup_message_headers_get_content_length(soupMessage->response_headers));
+    setHTTPStatusText(soupMessage->reason_phrase);
+    setSuggestedFilename(filenameFromHTTPContentDisposition(httpHeaderField("Content-Disposition")));
 }
 
 }
